[gd_scene load_steps=8 format=3 uid="uid://cd4br6wt3f6eq"]

[ext_resource type="Script" uid="uid://cjmltxoxnbt2n" path="res://src/projectile/projectile.gd" id="1_0ck1q"]
[ext_resource type="Texture2D" uid="uid://cbwjwh6fsbnw1" path="res://src/projectile/projectile.png" id="2_tawxj"]

[sub_resource type="Animation" id="Animation_0ck1q"]
resource_name = "shoot"

[sub_resource type="Animation" id="Animation_tawxj"]
resource_name = "break"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteProjectile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_kc6oy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteProjectile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ckvcp"]
_data = {
&"RESET": SubResource("Animation_kc6oy"),
&"break": SubResource("Animation_tawxj"),
&"shoot": SubResource("Animation_0ck1q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kc6oy"]
size = Vector2(6, 6)

[node name="projectile" type="Area2D"]
script = ExtResource("1_0ck1q")
SPEED = -150

[node name="SpriteProjectile" type="Sprite2D" parent="."]
texture = ExtResource("2_tawxj")
hframes = 2
vframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ckvcp")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kc6oy")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-3, -3, 6, 8)

[node name="TimerDestroy" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TimerDestroy" to="." method="_on_timer_destroy_timeout"]
